--- a/random.cabal
+++ b/random.cabal
@@ -6,6 +6,7 @@ maintainer:	libraries@haskell.org
 synopsis:	random number library
 description:
 	This package provides a random number library.
+build-type: Simple
 exposed-modules:
 	System.Random
 extensions:	CPP
