--- a/random.cabal
+++ b/random.cabal
@@ -15,7 +15,7 @@ Library
     exposed-modules:
         System.Random
     extensions:	CPP
-    build-depends: base, time
+    build-depends: base >= 3 && < 5, time
 
 source-repository head
     type:     darcs
