--- a/random.cabal
+++ b/random.cabal
@@ -15,6 +15,7 @@ Library
     exposed-modules:
         System.Random
     extensions:	CPP
+    GHC-Options: -O2 
     build-depends: base >= 3 && < 5, time
 
 source-repository head
