--- a/random.cabal
+++ b/random.cabal
@@ -28,5 +28,5 @@ Library
 
 source-repository head
     type:     git
-    location: http://darcs.haskell.org/packages/random.git/
+    location: http://git.haskell.org/packages/random.git
 
