--- a/random.cabal
+++ b/random.cabal
@@ -1,8 +1,9 @@
 name:		random
-version:	1.0.1.1
+version:	1.0.1.2
 
 -- 1.0.1.0 -- bump for bug fixes, but no SplittableGen yet
 -- 1.0.1.1 -- bump for overflow bug fixes
+-- 1.0.1.2 -- bump for ticket 8704, build fusion
 
 license:	BSD3
 license-file:	LICENSE
