--- a/random.cabal
+++ b/random.cabal
@@ -37,6 +37,13 @@ source-repository head
 -- $ cabal configure --enable-tests
 -- $ cabal test --show-details=always --test-options="+RTS -M1M -RTS"
 
+Test-Suite T7936
+    type:           exitcode-stdio-1.0
+    main-is:        T7936.hs
+    hs-source-dirs: tests
+    build-depends:  base >= 3 && < 5, random
+    ghc-options:    -rtsopts -O2
+
 Test-Suite TestRandomRs
     type:           exitcode-stdio-1.0
     main-is:        TestRandomRs.hs
