--- a/random.cabal
+++ b/random.cabal
@@ -6,7 +6,7 @@ version:	1.1
 
 license:	BSD3
 license-file:	LICENSE
-maintainer:	rrnewton@gmail.com
+maintainer:	core-libraries-committee@haskell.org
 bug-reports:	https://github.com/haskell/random/issues
 synopsis:	random number library
 category:       System
