--- a/random.cabal
+++ b/random.cabal
@@ -40,7 +40,7 @@ Library
 
 source-repository head
     type:     git
-    location: http://git.haskell.org/packages/random.git
+    location: https://github.com/haskell/random.git
 
 -- To run the Test-Suite:
 -- $ cabal configure --enable-tests
