--- a/random.cabal
+++ b/random.cabal
@@ -67,7 +67,7 @@ library
   -- Directories containing source files.
   hs-source-dirs:      src
 
-  ghc-options: -O2
+  ghc-options: -O2 -Wall
 
   -- Base language which the package is written in.
   default-language:    Haskell2010
