--- a/random.cabal
+++ b/random.cabal
@@ -43,7 +43,7 @@ build-type:          Simple
 
 -- Extra files to be distributed with the package, such as examples or a
 -- README.
-extra-source-files:  ChangeLog.md
+extra-source-files:  CHANGELOG.md
 
 -- Constraint on the version of Cabal needed to build this package.
 cabal-version:       >=1.10
