--- a/random.cabal
+++ b/random.cabal
@@ -43,7 +43,12 @@ build-type:          Simple
 
 -- Extra files to be distributed with the package, such as examples or a
 -- README.
-extra-source-files:  CHANGELOG.md
+extra-source-files:
+    CHANGELOG.md
+    .travis.yml
+    readme.md
+
+
 
 -- Constraint on the version of Cabal needed to build this package.
 cabal-version:       >=1.10
@@ -73,6 +78,8 @@ library
                       ,entropy == 0.3.*
                       ,numeric-extras == 0.1.*
                       ,primitive >= 0.6
+                      ,transformers >= 0.2
+                      ,transformers-compat >= 0.3
                   -- entropy will later be folded into random, probably
 
   -- Directories containing source files.
