--- a/random.cabal
+++ b/random.cabal
@@ -80,6 +80,8 @@ library
                       ,primitive >= 0.6
                       ,transformers >= 0.2
                       ,transformers-compat >= 0.3
+                      ,vector >= 0.11 && < 0.14
+                      -- vector  0.13 wont likely break stuff i care about
                   -- entropy will later be folded into random, probably
 
   -- Directories containing source files.
