--- a/random.cabal
+++ b/random.cabal
@@ -10,7 +10,7 @@ name:                random
 -- PVP summary:      +-+------- breaking API changes
 --                   | | +----- non-breaking API additions
 --                   | | | +--- code changes with no API change
-version:             2.0.0.0
+version:             1.3.0.0
 
 -- A short (one-line) description of the package.
 synopsis:            Random number generation library for haskell
@@ -57,8 +57,10 @@ cabal-version:       >=1.10
 library
   -- Modules exported` by the library.
   exposed-modules:
+    System.Random
     System.Random.SplitMix.Internal
-    System.Random.PCG.Internal
+    System.Random.SplitMix.Internal.Splitting
+    System.Random.PCG32.Internal
     Data.Distribution.FloatingInterval
     Data.Distribution.Normal
     Data.Distribution.Permutation
