Allow RNGs to provide efficient implementations for variety of prim types
Introduce PrimMonad interface. Add range generation used in splitmix

Export all class contents

Initial stab at MonadRandom

Working MonadRandom

Rename next* to gen*

--- a/random.cabal
+++ b/random.cabal
@@ -34,9 +34,11 @@ cabal-version: >= 1.8
 Library
     exposed-modules:
         System.Random
-    extensions:	CPP
     GHC-Options: -O2
-    build-depends: base >= 3 && < 5, time
+    build-depends: base >= 3 && < 5
+                 , primitive
+                 , time
+                 , mtl
 
 source-repository head
     type:     git
