Add some examples and an instance for mwc-random

--- a/random.cabal
+++ b/random.cabal
@@ -39,6 +39,7 @@ Library
                  , primitive
                  , time
                  , mtl
+                 , mwc-random
 
 source-repository head
     type:     git
