--- a/random.cabal
+++ b/random.cabal
@@ -36,6 +36,7 @@ Library
         System.Random
     GHC-Options: -O2
     build-depends: base >= 3 && < 5
+                 , bytestring
                  , primitive
                  , time
                  , mtl
