--- a/random.cabal
+++ b/random.cabal
@@ -1,7 +1,5 @@
 name:		random
-version:	1.1
-
-
+version:	1.2
 
 
 license:	BSD3
@@ -11,16 +9,13 @@ bug-reports:	https://github.com/haskell/random/issues
 synopsis:	random number library
 category:       System
 description:
-	This package provides a basic random number generation
-	library, including the ability to split random number
-	generators.
+  This package provides a basic random number generation
+  library, including the ability to split random number
+  generators.
 
 extra-source-files:
-  .travis.yml
   README.md
   CHANGELOG.md
-  .gitignore
-  .darcs-boring
 
 
 
@@ -46,10 +41,6 @@ source-repository head
     type:     git
     location: http://git.haskell.org/packages/random.git
 
--- To run the Test-Suite:
--- $ cabal configure --enable-tests
--- $ cabal test --show-details=always --test-options="+RTS -M1M -RTS"
-
 Test-Suite T7936
     type:           exitcode-stdio-1.0
     main-is:        T7936.hs
@@ -62,13 +53,11 @@ Test-Suite TestRandomRs
     main-is:        TestRandomRs.hs
     hs-source-dirs: tests
     build-depends:  base >= 3 && < 5, random
-    ghc-options:    -rtsopts -O2
-    -- TODO. Why does the following not work?
-    --test-options:   +RTS -M1M -RTS
+    ghc-options:    -rtsopts -O2 -with-rtsopts=-M1M
 
 Test-Suite TestRandomIOs
     type:           exitcode-stdio-1.0
     main-is:        TestRandomIOs.hs
     hs-source-dirs: tests
     build-depends:  base >= 3 && < 5, random
-    ghc-options:    -rtsopts -O2
+    ghc-options:    -rtsopts -O2 -with-rtsopts=-M1M
