--- a/stack.yaml
+++ b/stack.yaml
@@ -30,16 +30,23 @@ resolver: lts-15.1
 #   - wai
 packages:
 - .
+
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
-#
-# extra-deps:
-# - acme-missiles-0.3
-# - git: https://github.com/commercialhaskell/stack.git
-#   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
-#
-# extra-deps: []
+extra-deps:
+  # We require a splitmix version that supports the "random" flag. When this
+  # flag is set to false, splitmix does not depend on the random package. We
+  # require the flag to be set to false to avoid a circular dependency:
+  #     random -> splitmix -> random.
+  # The oldest splitmix version to support the "random" flag is 0.0.3. LTS
+  # snapshots prior to lts-14 contain older versions of splitmix. To make sure
+  # the build goes through, we pin the splitmix version here.
+  #
+  # Note that although the resolver defined in this file comes with a splitmix
+  # >= 0.0.3 by default, this stack.yaml is also used in CI, where the resolver
+  # is overridden, making this explicit pinning of splitmix necessary.
+- splitmix-0.0.4@sha256:fb9bb8b54a2e76c8a021fe5c4c3798047e1f60e168379a1f80693047fe00ad0e,4813
 
 # Override default flag values for local packages and extra-deps
 flags:
