--- a/random.cabal
+++ b/random.cabal
@@ -32,9 +32,9 @@ library
     default-language: Haskell2010
     ghc-options:      -Wall
     build-depends:
-        base >=3 && <5,
+        base >=4.10 && <5,
         bytestring -any,
-        primitive -any,
+        primitive >= 0.6.4.0 && <8,
         mtl -any,
         splitmix -any
 
