Adopt previous Integer range generator for UniformRange instance. Improve tests and coverage

--- a/random.cabal
+++ b/random.cabal
@@ -72,7 +72,7 @@ test-suite spec
     main-is:        Spec.hs
     hs-source-dirs: tests
     other-modules:
-        Spec.Bitmask
+        -- Spec.Bitmask
         Spec.Range
         Spec.Run
 
