--- a/stack.yaml
+++ b/stack.yaml
@@ -34,7 +34,9 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
-extra-deps: []
+extra-deps:
+- git: https://github.com/lehins/splitmix.git
+  commit: bb92e025a0d0a0353e2d6369191fecec8e8c99ad
 
 # Override default flag values for local packages and extra-deps
 flags:
