--- a/random.cabal
+++ b/random.cabal
@@ -84,3 +84,17 @@ test-suite spec
         tasty -any,
         tasty-smallcheck -any,
         tasty-expected-failure -any
+
+benchmark legacy-bench
+    type:             exitcode-stdio-1.0
+    main-is:          SimpleRNGBench.hs
+    hs-source-dirs:   bench-legacy
+    other-modules:    BinSearch
+    default-language: Haskell2010
+    ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
+    build-depends:
+        base -any,
+        random -any,
+        rdtsc -any,
+        split -any,
+        time -any
