--- a/random.cabal
+++ b/random.cabal
@@ -70,14 +70,15 @@ test-suite doctests
         unliftio -any
 
 test-suite spec
-    type:           exitcode-stdio-1.0
-    main-is:        Spec.hs
-    hs-source-dirs: tests
+    type:             exitcode-stdio-1.0
+    main-is:          Spec.hs
+    hs-source-dirs:   tests
     other-modules:
         Spec.Range
         Spec.Run
 
-    ghc-options:    -Wall
+    default-language: Haskell2010
+    ghc-options:      -Wall
     build-depends:
         base -any,
         random -any,
