--- a/random.cabal
+++ b/random.cabal
@@ -23,9 +23,9 @@ source-repository head
 
 custom-setup
     setup-depends:
-        base -any,
-        Cabal -any,
-        cabal-doctest >=1.0.6
+        base >=4.10 && <5,
+        Cabal >=1.10 && <3.3,
+        cabal-doctest >=1.0.6 && <1.1
 
 library
     exposed-modules:  System.Random
@@ -52,8 +52,8 @@ test-suite legacy
     default-language: Haskell2010
     ghc-options:      -with-rtsopts=-M4M
     build-depends:
-        base -any,
-        containers -any,
+        base >=4.10 && <5,
+        containers >=0.5 && <0.7,
         random -any
 
 test-suite doctests
@@ -62,12 +62,12 @@ test-suite doctests
     hs-source-dirs:   tests
     default-language: Haskell2010
     build-depends:
-        base -any,
-        doctest >=0.15,
-        mwc-random -any,
-        primitive -any,
+        base >=4.10 && <5,
+        doctest >=0.15 && <0.17,
+        mwc-random >=0.13 && <0.15,
+        primitive >=0.6 && <0.8,
         random -any,
-        unliftio -any
+        unliftio >=0.2 && <0.3
 
 test-suite spec
     type:             exitcode-stdio-1.0
@@ -80,12 +80,12 @@ test-suite spec
     default-language: Haskell2010
     ghc-options:      -Wall
     build-depends:
-        base -any,
+        base >=4.10 && <5,
         random -any,
-        smallcheck -any,
-        tasty -any,
-        tasty-smallcheck -any,
-        tasty-expected-failure -any
+        smallcheck >=1.1 && <1.2,
+        tasty >=1.0 && <1.3,
+        tasty-smallcheck >=0.8 && <0.9,
+        tasty-expected-failure >=0.11 && <0.12
 
 benchmark legacy-bench
     type:             exitcode-stdio-1.0
@@ -95,8 +95,8 @@ benchmark legacy-bench
     default-language: Haskell2010
     ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
     build-depends:
-        base -any,
+        base >=4.10 && <5,
         random -any,
         rdtsc -any,
-        split -any,
-        time -any
+        split >=0.2 && <0.3,
+        time >=1.8 && <1.11
