--- a/random.cabal
+++ b/random.cabal
@@ -50,7 +50,7 @@ test-suite legacy
         Legacy.RangeTest
 
     default-language: Haskell2010
-    ghc-options:      -with-rtsopts=-M4M
+    ghc-options:      -with-rtsopts=-M4M -Wno-deprecations
     build-depends:
         base -any,
         containers -any,
