Major restructure of the module:
* Separate `System.Random` into:
  * `System.Random.Internal` that hold most of the classes,
    internal functions and some of the instances
  * `Sytstem.Random` that export the pure interface only. That means
    `RandomGen`, `Random`, `Uniform` and `UniformRange` classes
  * `System.Random.Monad` all of the monadic functionality plus the
    re-export of the full `System.Random` module.
* Split the relevant parts of documentation into Pure and Monadic and
  place them into their corresponding modules

--- a/random.cabal
+++ b/random.cabal
@@ -29,6 +29,8 @@ custom-setup
 
 library
     exposed-modules:  System.Random
+                    , System.Random.Internal
+                    , System.Random.Monad
     c-sources:        cbits/CastFloatWord.cmm
     default-language: Haskell2010
     ghc-options:      -Wall
