--- a/random.cabal
+++ b/random.cabal
@@ -135,7 +135,8 @@ test-suite spec
         smallcheck >=1.1 && <1.2,
         tasty >=1.0 && <1.3,
         tasty-smallcheck >=0.8 && <0.9,
-        tasty-expected-failure >=0.11 && <0.12
+        tasty-expected-failure >=0.11 && <0.12,
+        tasty-hunit >=0.10 && <0.11
 
 benchmark legacy-bench
     type:             exitcode-stdio-1.0
