--- a/random.cabal
+++ b/random.cabal
@@ -19,7 +19,7 @@ description:
     As an example, here is how you can simulate rolls of a six-sided die using
     'System.Random.uniformR':
     .
-    >>> let roll = flip uniformR (1, 6)   :: RandomGen g => g -> (Word8, g)
+    >>> let roll = uniformR (1, 6)        :: RandomGen g => g -> (Word8, g)
     >>> let rolls = unfoldr (Just . roll) :: RandomGen g => g -> [Word8]
     >>> let pureGen = mkStdGen 42
     >>> take 10 (rolls pureGen)           :: [Word8]
@@ -50,6 +50,7 @@ description:
     number generators. In this example, we use the one provided in the
     <https://hackage.haskell.org/package/mwc-random mwc-random> package:
     .
+    >>> import System.Random.MWC as MWC
     >>> let rollM = uniformRM (1, 6)       :: MonadRandom g s m => g s -> m Word8
     >>> monadicGen <- MWC.create
     >>> (replicateM 10 . rollM) monadicGen :: m [Word8]
@@ -143,7 +144,7 @@ benchmark legacy-bench
     hs-source-dirs:   bench-legacy
     other-modules:    BinSearch
     default-language: Haskell2010
-    ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
+    ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N -Wno-deprecations
     build-depends:
         base >=4.10 && <5,
         random -any,
