--- a/random.cabal
+++ b/random.cabal
@@ -144,7 +144,9 @@ benchmark legacy-bench
     hs-source-dirs:   bench-legacy
     other-modules:    BinSearch
     default-language: Haskell2010
-    ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N -Wno-deprecations
+    ghc-options:
+        -Wall -O2 -threaded -rtsopts -with-rtsopts=-N -Wno-deprecations
+
     build-depends:
         base >=4.10 && <5,
         random -any,
@@ -153,10 +155,11 @@ benchmark legacy-bench
         time >=1.8 && <1.11
 
 benchmark bench
-    type:           exitcode-stdio-1.0
-    main-is:        Main.hs
-    hs-source-dirs: bench
-    ghc-options:    -Wall -O2
+    type:             exitcode-stdio-1.0
+    main-is:          Main.hs
+    hs-source-dirs:   bench
+    default-language: Haskell2010
+    ghc-options:      -Wall -O2
     build-depends:
         base >=4.10 && <5,
         gauge >=0.2.3 && <0.3,
