--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,3 @@
-*~
-
-Thumbs.db
-.DS_Store
-
-GNUmakefile
-dist-install/
-ghc.mk
-
-.cabal-sandbox/
+*.lock
 .stack-work/
 cabal.project.local
-cabal.sandbox.config
-dist-newstyle/
-dist/
-stack.yaml.lock
