--- a/random.cabal
+++ b/random.cabal
@@ -80,6 +80,7 @@ library
         System.Random.Internal
         System.Random.Monad
 
+    hs-source-dirs:   src
     default-language: Haskell2010
     ghc-options:
         -Weverything -Wno-implicit-prelude -Wno-missing-import-lists
