--- a/random.cabal
+++ b/random.cabal
@@ -86,6 +86,8 @@ library
         System.Random
         System.Random.Internal
         System.Random.Stateful
+    other-modules:
+        System.Random.GFinite
 
     hs-source-dirs:   src
     default-language: Haskell2010
