--- a/random.cabal
+++ b/random.cabal
@@ -161,6 +161,10 @@ test-suite spec
         tasty-smallcheck >=0.8 && <0.9,
         tasty-hunit >=0.10 && <0.11
 
+    if impl(ghc >= 8.0)
+        other-modules: Spec.Inspection
+        build-depends: tasty-inspection-testing
+
 benchmark legacy-bench
     type:             exitcode-stdio-1.0
     main-is:          SimpleRNGBench.hs
