--- a/random.cabal
+++ b/random.cabal
@@ -161,9 +161,25 @@ test-suite spec
         tasty-smallcheck >=0.8 && <0.9,
         tasty-hunit >=0.10 && <0.11
 
+-- Note. Fails when compiled with coverage:
+-- https://github.com/haskell/random/issues/107
+test-suite spec-inspection
+    type:             exitcode-stdio-1.0
+    main-is:          Spec.hs
+    hs-source-dirs:   test-inspection
+    build-depends:
+
+    default-language: Haskell2010
+    ghc-options:      -Wall
+    build-depends:
+        base -any,
+        random -any,
+        tasty >=1.0 && <1.5
     if impl(ghc >= 8.0)
-        other-modules: Spec.Inspection
-        build-depends: tasty-inspection-testing
+        build-depends:
+            tasty-inspection-testing
+        other-modules:
+            Spec.Inspection
 
 benchmark legacy-bench
     type:             exitcode-stdio-1.0
