--- a/random.cabal
+++ b/random.cabal
@@ -126,9 +126,9 @@ test-suite legacy-test
         ghc-options:
             -Wno-deprecations
     build-depends:
-        base -any,
+        base,
         containers >=0.5 && <0.7,
-        random -any
+        random
 
 test-suite doctests
     type:             exitcode-stdio-1.0
@@ -136,7 +136,7 @@ test-suite doctests
     hs-source-dirs:   test
     default-language: Haskell2010
     build-depends:
-        base -any,
+        base,
         doctest >=0.15 && <0.19,
         mwc-random >=0.13 && <0.16,
         primitive >=0.6 && <0.8,
@@ -157,9 +157,9 @@ test-suite spec
     default-language: Haskell2010
     ghc-options:      -Wall
     build-depends:
-        base -any,
-        bytestring -any,
-        random -any,
+        base,
+        bytestring,
+        random,
         smallcheck >=1.2 && <1.3,
         stm,
         tasty >=1.0 && <1.5,
@@ -178,8 +178,8 @@ test-suite spec-inspection
     default-language: Haskell2010
     ghc-options:      -Wall
     build-depends:
-        base -any,
-        random -any,
+        base,
+        random,
         tasty >=1.0 && <1.5
     if impl(ghc >= 8.0)
         build-depends:
@@ -200,9 +200,9 @@ benchmark legacy-bench
             -Wno-deprecations
 
     build-depends:
-        base -any,
-        random -any,
-        rdtsc -any,
+        base,
+        random,
+        rdtsc,
         split >=0.2 && <0.3,
         time >=1.4 && <1.11
 
@@ -213,9 +213,9 @@ benchmark bench
     default-language: Haskell2010
     ghc-options:      -Wall -O2
     build-depends:
-        base -any,
+        base,
         mtl,
         primitive >= 0.7.1,
-        random -any,
+        random,
         splitmix >=0.1 && <0.2,
         tasty-bench
