--- a/random.cabal
+++ b/random.cabal
@@ -152,6 +152,7 @@ test-suite spec
     other-modules:
         Spec.Range
         Spec.Run
+        Spec.Stateful
 
     default-language: Haskell2010
     ghc-options:      -Wall
@@ -160,9 +161,11 @@ test-suite spec
         bytestring -any,
         random -any,
         smallcheck >=1.2 && <1.3,
+        stm,
         tasty >=1.0 && <1.5,
         tasty-smallcheck >=0.8 && <0.9,
-        tasty-hunit >=0.10 && <0.11
+        tasty-hunit >=0.10 && <0.11,
+        transformers
 
 -- Note. Fails when compiled with coverage:
 -- https://github.com/haskell/random/issues/107
