--- a/random.cabal
+++ b/random.cabal
@@ -137,13 +137,15 @@ test-suite doctests
     default-language: Haskell2010
     build-depends:
         base,
-        doctest >=0.15 && <0.19,
-        mwc-random >=0.13 && <0.16,
-        primitive >=0.6 && <0.8,
-        random,
-        stm,
-        unliftio >=0.2 && <0.3,
-        vector >= 0.10 && <0.14
+        doctest >=0.15 && <0.19
+    if impl(ghc >= 8.2) && impl(ghc < 8.10)
+        build-depends:
+            mwc-random >=0.13 && <0.16,
+            primitive >=0.6 && <0.8,
+            random,
+            stm,
+            unliftio >=0.2 && <0.3,
+            vector >= 0.10 && <0.14
 
 test-suite spec
     type:             exitcode-stdio-1.0
