--- a/random.cabal
+++ b/random.cabal
@@ -59,7 +59,7 @@ description:
     See "System.Random.Stateful" for more details.
 
 category:           System
-build-type:         Simple
+build-type:         Custom
 extra-source-files:
     README.md
     CHANGELOG.md
@@ -129,21 +129,21 @@ test-suite legacy-test
         random
 
 test-suite doctests
+    if impl(ghc < 8.2) || impl(ghc >= 8.10)
+        buildable: False
     type:             exitcode-stdio-1.0
     main-is:          doctests.hs
     hs-source-dirs:   test
     default-language: Haskell2010
     build-depends:
         base,
-        doctest >=0.15 && <0.20
-    if impl(ghc >= 8.2) && impl(ghc < 8.10)
-        build-depends:
-            mwc-random >=0.13 && <0.16,
-            primitive >=0.6 && <0.8,
-            random,
-            stm,
-            unliftio >=0.2 && <0.3,
-            vector >= 0.10 && <0.14
+        doctest >=0.15 && <0.20,
+        mwc-random >=0.13 && <0.16,
+        primitive >=0.6 && <0.8,
+        random,
+        stm,
+        unliftio >=0.2 && <0.3,
+        vector >= 0.10 && <0.14
 
 test-suite spec
     type:             exitcode-stdio-1.0
@@ -219,3 +219,8 @@ benchmark bench
         random,
         splitmix >=0.1 && <0.2,
         tasty-bench
+
+custom-setup
+ setup-depends:
+   base >= 4 && <5,
+   cabal-doctest >= 1 && <1.1
