--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,12 +17,35 @@ jobs:
       matrix:
         include:
           # Linux
-          - { cabal: "3.4", os: ubuntu-latest,  ghc: "7.10.3" }
-          - { cabal: "3.4", os: ubuntu-latest,  ghc: "8.0.2"  }
-          - { cabal: "3.4", os: ubuntu-latest,  ghc: "8.2.2"  }
-          - { cabal: "3.4", os: ubuntu-latest,  ghc: "latest" }
+          - { cabal: "3.6", os: ubuntu-latest,  ghc: "7.10.3" }
+          - { cabal: "3.6", os: ubuntu-latest,  ghc: "8.0.2"  }
+          - { cabal: "3.6", os: ubuntu-latest,  ghc: "8.2.2"  }
+          - { cabal: "3.6", os: ubuntu-latest,  ghc: "8.4.4"  }
+          - { cabal: "3.6", os: ubuntu-latest,  ghc: "8.6.5"  }
+          - { cabal: "3.6", os: ubuntu-latest,  ghc: "8.8.4"  }
+          # - { cabal: "3.6", os: ubuntu-latest,  ghc: "8.10.7" }
+          - { cabal: "3.6", os: ubuntu-latest,  ghc: "9.0.2"  }
+          - { cabal: "3.6", os: ubuntu-latest,  ghc: "9.2.2"  }
           # MacOS
-          - { cabal: "3.4", os: macOS-latest,   ghc: "latest" }
+          - { cabal: "3.6", os: macOS-latest,  ghc: "7.10.3" }
+          - { cabal: "3.6", os: macOS-latest,  ghc: "8.0.2"  }
+          - { cabal: "3.6", os: macOS-latest,  ghc: "8.2.2"  }
+          - { cabal: "3.6", os: macOS-latest,  ghc: "8.4.4"  }
+          - { cabal: "3.6", os: macOS-latest,  ghc: "8.6.5"  }
+          - { cabal: "3.6", os: macOS-latest,  ghc: "8.8.4"  }
+          # - { cabal: "3.6", os: macOS-latest,  ghc: "8.10.7" }
+          - { cabal: "3.6", os: macOS-latest,  ghc: "9.0.2"  }
+          - { cabal: "3.6", os: macOS-latest,  ghc: "9.2.2"  }
+          # Windows
+          - { cabal: "3.6", os: windows-latest,  ghc: "7.10.3" }
+          - { cabal: "3.6", os: windows-latest,  ghc: "8.0.2"  }
+          - { cabal: "3.6", os: windows-latest,  ghc: "8.2.2"  }
+          - { cabal: "3.6", os: windows-latest,  ghc: "8.4.4"  }
+          - { cabal: "3.6", os: windows-latest,  ghc: "8.6.5"  }
+          - { cabal: "3.6", os: windows-latest,  ghc: "8.8.4"  }
+          # - { cabal: "3.6", os: windows-latest,  ghc: "8.10.7" }
+          - { cabal: "3.6", os: windows-latest,  ghc: "9.0.2"  }
+          - { cabal: "3.6", os: windows-latest,  ghc: "9.2.2"  }
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-haskell@v1
@@ -57,7 +80,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        resolver: [nightly, lts-18, lts-16, lts-14, lts-12]
+        resolver: [nightly, lts-19, lts-18, lts-16, lts-14, lts-12]
         include:
           - resolver: lts-12
             ghc: 8.4.4
@@ -68,23 +91,36 @@ jobs:
             ghc: 8.8.4
             stack-yaml: stack-old.yaml
           - resolver: lts-18
-            ghc: 8.10.4
+            ghc: 8.10.7
+            stack-yaml: stack.yaml
+          - resolver: lts-19
+            ghc: 9.0.2
             stack-yaml: stack.yaml
           - resolver: nightly
             stack-yaml: stack.yaml
           # Latest stable for MacOS: ghc-8.8.4
           - resolver: lts-16
             os: macos-latest
+            stack-yaml: stack-old.yaml
           # Latest stable for Windows: ghc-8.6.4
           - resolver: lts-14
             os: windows-latest
             stack-yaml: stack-coveralls.yaml
     env:
       STACK_YAML: stack.yaml
-      STACK_ARGS: '--resolver ${{ matrix.resolver }}'
-      cache-version: v3 # bump up this version to invalidate currently stored cache
+      STACK_ARGS: '--resolver ${{ matrix.resolver }} --system-ghc'
+      cache-version: v4 # bump up this version to invalidate currently stored cache
     steps:
     - uses: actions/checkout@v2
+
+    - uses: haskell/actions/setup@v1
+      id: setup-haskell-cabal
+      name: Setup Haskell
+      with:
+        ghc-version: ${{ matrix.ghc }}
+        enable-stack: true
+        stack-version: 'latest'
+        cabal-version: '3.6'
 
     - name: Cache
       id: cache
@@ -116,25 +152,19 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-${{ matrix.resolver }}-programs-${{ env.cache-version }}
 
-    # For ubuntu we can use fast ppa installation that also reduce cache size drastically
-    - name: Ubuntu install GHC
-      if: matrix.ghc != '' && matrix.os == 'ubuntu-latest'
-      run: |
-        sudo add-apt-repository ppa:hvr/ghc -y
-        sudo apt-get update
-        sudo apt-get install ghc-${{ matrix.ghc }}
     - name: Install Stack and GHC
       run: |
         set -ex
         curl -sSL https://get.haskellstack.org/ | sh -s - -f
-        curl -sSL https://raw.githubusercontent.com/lehins/utils/786c3fe7e9e1345d7b403019f52e344627224edf/haskell/git-modtime/git-modtime.hs -o git-modtime.hs
+        curl -sSL https://raw.githubusercontent.com/lehins/utils/5d9b17f2f084ce54978dbd71974970483063a540/haskell/git-modtime/git-modtime.hs -o git-modtime.hs
         [ -n "${{ matrix.ghc }}" ] && [ "${{ matrix.os }}" == "ubuntu-latest" ] && STACK_ARGS="$STACK_ARGS --system-ghc"
         [ -n "${{ matrix.stack-yaml }}" ] && STACK_YAML=${{ matrix.stack-yaml }}
         # git-modtime.hs updates modification time of files to the latest commit time that
         # a file was modified in. This ensures that stack does not rebuild unchanged
         # files. More info in this SO answer:
         # https://stackoverflow.com/questions/60906336/stack-haskell-build-cache-of-source-files-with-github-actions/61178945#61178945
-        stack $STACK_ARGS runghc git-modtime.hs
+        # Windows is confused about stack's default user directory
+        stack $STACK_ARGS runghc -- git-modtime.hs -f .stack-work/tree-contents.txt
     - name: Tests
       env:
         COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
